react-bootstrap: fix broken collapsed taglicious component state
This occurred when no tags were selected, the input field was empty, and there was no placeholder or
any other elements rendered in the component.

--- a/packages/react-bootstrap/scss/style.scss
+++ b/packages/react-bootstrap/scss/style.scss
@@ -49,6 +49,13 @@
         }
       }
 
+      .taglicious-input-placeholder {
+        & > span {
+          display: inline-block;
+          height: 1rem;
+        }
+      }
+
       .taglicious-filter-input {
         width: 100%;
         grid-area: 1 / 2;
